--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^16.4.5",
     "env": "^0.0.2",
     "express": "^4.21.1",
